Edited modal images so they appear correctly on smaller screens
- Modal image height and width now 250px with a 5px padding top

--- a/css/home.styles.css
+++ b/css/home.styles.css
@@ -154,8 +154,9 @@ nav a {
 }
 
 .modal-image {
-  height: 350px;
-  width: 350px;
+  padding-top: 5px;
+  height: 250px;
+  width: 250px;
   margin: auto;
 }
 
